third_party/move/move-compiler-v2/tests/checking/typing/lambda_returning_lambda.exp

Diagnostics:
error: Functions may not return function-typed values, but function `M::foreach_caller` has a parameter of function type with function-typed result:
   ┌─ tests/checking/typing/lambda_returning_lambda.move:12:23
   │
12 │     public inline fun foreach_caller<T>(v: &vector<T>, action: ||(|&T|)) {
   │                       ^^^^^^^^^^^^^^                   ------ Parameter `action` has type `||(|&T|)`, which has function type `|&T|` as a function result type
